--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			
 			<fieldset>
 				<table>
-				<legend><p>Gender-:</p></legend>
+				<legend><p>Skills-:</p></legend>
 				<tr>
 					<td>
 						<input type="checkbox" name="skill" id="chk1" value="Python">
