--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						<label for="chk2">SQL</label>
 					</td>
 					<td>
-						<input type="radio" name="skill" id="chk3" value="Web Designing">
+						<input type="checkbox" name="skill" id="chk3" value="Web Designing">
 						<label for="chk3">Web Designing</label>
 					</td>
 					
