--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@
 				<legend><p>Skills-:</p></legend>
 				<tr>
 					<td>
-						<input type="checkbox" name="skill" id="chk1" value="Python">
+						<input type="checkbox" name="skill[]" id="chk1" value="Python">
 						<label for="chk1">Python</label>
 					</td>
 					<td>
-						<input type="checkbox" name="skill" id="chk2" value="SQL">
+						<input type="checkbox" name="skill[]" id="chk2" value="SQL">
 						<label for="chk2">SQL</label>
 					</td>
 					<td>
-						<input type="checkbox" name="skill" id="chk3" value="Web Designing">
+						<input type="checkbox" name="skill[]" id="chk3" value="Web Designing">
 						<label for="chk3">Web Designing</label>
 					</td>
 					
