--- a/details.html
+++ b/details.html
@@ -35,6 +35,11 @@
 			<td>Gender-: </td>
 			<td><p id="gender">gender</p></td>
 		</tr>
+		
+		<tr>
+			<td>Skills-: </td>
+			<td><p id="skill"></p></td>
+		</tr>
 
 	</table>
 
